RegressionTests/TestSuiteExport/reject/type_mismatch.blade
// EXPECT: fail
// DIAGNOSTICS: TypeMismatch

cog task main() {
    var flag: bool = 1;
}